--- a/project-service/.gitignore
+++ b/project-service/.gitignore
@@ -29,5 +29,5 @@ build/
 
 ### VS Code ###
 .vscode/
-#src/main/resources/*.properties
+src/main/resources/application-*.properties
 src/main/resources/*.yml
