--- a/project-webUI/package.json
+++ b/project-webUI/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "iview-loader": "^1.3.0",
     "view-design": "^4.2.0",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
