--- a/project-service/src/main/resources/application.properties
+++ b/project-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/curriculum_design?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=jiebin22
+
+debug=true
