--- a/project-service/src/main/resources/application.properties
+++ b/project-service/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8001
 spring.profiles.active=db
 
 debug=true
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/curriculum_design?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=3623236
